--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -41,7 +41,7 @@
     <uses-permission android:name="android.permission.MODIFY_AUDIO_ROUTING" />
 
     <application
-            android:icon="@drawable/icon"
+            android:icon="@mipmap/ic_launcher_audiofx"
             android:label="@string/app_name"
             android:supportsRtl="true"
             android:hardwareAccelerated="true"
