--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,6 +22,15 @@
 
     <uses-sdk android:minSdkVersion="21"/>
 
+    <uses-feature android:name="android.software.leanback"
+    android:required="false" />
+
+    <uses-feature android:name="android.hardware.touchscreen"
+    android:required="false" />
+
+    <uses-feature android:name="android.hardware.screen.portrait"
+    android:required="false" />
+
     <uses-permission android:name="android.permission.CHANGE_COMPONENT_ENABLED_STATE"/>
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -46,6 +55,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LEANBACK_SETTINGS" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.media.action.DISPLAY_AUDIO_EFFECT_CONTROL_PANEL"/>
